--- a/config.toml
+++ b/config.toml
@@ -1,31 +1,31 @@
 [wandb]
+key = "02dcc933a0413139527357ba6fc2032a65258d3c"
 project = "sparkify_v2"
-key = ""
 
 [prefect]
-key = ""
+key = "pnu_wer0aBKZBBptflYG1vwOuUNhfWk1N22q67W4"
 
 [dirs]
 init_path = "data"
-session_name = "sparkify"
-session_dir = "data/sparkify"
 raw_data_dir = "data/sparkify/raw_data"
+session_dir = "data/sparkify"
+session_name = "sparkify"
 
 [generated_data]
-preprocessed = "data/sparkify/preprocessed_data.parquet"
-features = "data/sparkify/feature_engineered_data.parquet"
-proc_data = "data/sparkify/proc_data"
-pipeline_model = "data/sparkify/pipeline_model"
-models_dir = "data/sparkify/models"
 artifacts_dir = "data/sparkify/artifacts"
+features = "data/sparkify/feature_engineered_data.parquet"
+models_dir = "data/sparkify/models"
+pipeline_model = "data/sparkify/pipeline_model"
+preprocessed = "data/sparkify/preprocessed_data.parquet"
+proc_data = "data/sparkify/proc_data"
 
 [raw_data_s3]
 bucket_name = "udacity-dsnd"
 file_name = "sparkify/mini_sparkify_event_data.json"
 
 [spark]
-master = "local[*]"
 app_name = "Sparkify"
+master = "local[*]"
 
 [model_experiment]
 max_evals = 20
@@ -35,21 +35,21 @@ seed = 42
 n_samples = 50
 
 [models.LogisticRegression]
-class = "sklearn.linear_model.LogisticRegression"
 args.class_weight = "balanced"
 args.max_iter = 5000
+class = "sklearn.linear_model.LogisticRegression"
 
 [models.RandomForestClassifier]
-class = "sklearn.ensemble.RandomForestClassifier"
 args.class_weight = "balanced"
+class = "sklearn.ensemble.RandomForestClassifier"
 
 [models.DecisionTreeClassifier]
-class = "sklearn.tree.DecisionTreeClassifier"
 args.class_weight = "balanced"
+class = "sklearn.tree.DecisionTreeClassifier"
 
 [models.XGBClassifier]
-class = "xgboost.XGBClassifier"
 args.scale_pos_weight = 1
+class = "xgboost.XGBClassifier"
 
 [models.GradientBoostingClassifier]
 class = "sklearn.ensemble.GradientBoostingClassifier"
@@ -58,58 +58,57 @@ class = "sklearn.ensemble.GradientBoostingClassifier"
 class = "sklearn.ensemble.HistGradientBoostingClassifier"
 
 [hyperparameters.RandomForestClassifier.n_estimators]
-type = "quniform"
 args = [10, 1000, 10]
+type = "quniform"
 
 [hyperparameters.RandomForestClassifier.max_depth]
-type = "quniform"
 args = [1, 20, 1]
+type = "quniform"
 
 [hyperparameters.XGBClassifier.n_estimators]
-type = "quniform"
 args = [10, 1000, 10]
+type = "quniform"
 
 [hyperparameters.XGBClassifier.max_depth]
-type = "quniform"
 args = [1, 20, 1]
+type = "quniform"
 
 [hyperparameters.XGBClassifier.learning_rate]
-type = "uniform"
 args = [0.01, 1.0]
+type = "uniform"
 
 [hyperparameters.DecisionTreeClassifier.max_depth]
-type = "quniform"
 args = [1, 20, 1]
+type = "quniform"
 
 [hyperparameters.LogisticRegression.C]
-type = "uniform"
 args = [0.01, 10.0]
+type = "uniform"
 
 [hyperparameters.GradientBoostingClassifier.n_estimators]
-type = "quniform"
 args = [10, 1000, 10]
+type = "quniform"
 
 [hyperparameters.GradientBoostingClassifier.max_depth]
-type = "quniform"
 args = [1, 20, 1]
+type = "quniform"
 
 [hyperparameters.GradientBoostingClassifier.learning_rate]
-type = "uniform"
 args = [0.01, 1.0]
+type = "uniform"
 
 [hyperparameters.HistGradientBoostingClassifier.max_depth]
-type = "quniform"
 args = [1, 20, 1]
+type = "quniform"
 
 [hyperparameters.HistGradientBoostingClassifier.learning_rate]
-type = "uniform"
 args = [0.01, 1.0]
+type = "uniform"
 
 [hyperparameters.HistGradientBoostingClassifier.max_iter]
-type = "quniform"
 args = [10, 1000, 10]
+type = "quniform"
 
 [hyperparameters.StackingClassifier.final_estimator__C]
-type = "uniform"
 args = [0.01, 10.0]
-
+type = "uniform"
